# conan-experimental-feature-investigation

./: README.md
cross-building/split-profiles/: build.bat
cross-building/split-profiles/consumer/: conanfile.py
cross-building/split-profiles/consumer/src/: CMakeLists.txt  consumer.c
cross-building/split-profiles/profiles/: vs2019-x86
cross-building/split-profiles/toolset/: conanfile.py
cross-building/split-profiles/toolset/src/: CMakeLists.txt  libtoolset.c  libtoolset.h  toolset.c
cross-building/split-profiles/toolset/test_package/: conanfile.py  example.c
